t420: fix button alignment

--- a/project/layout/CM/default/css/mixins.less
+++ b/project/layout/CM/default/css/mixins.less
@@ -153,6 +153,7 @@
 	font-size: @fontSizeButton;
 	cursor: pointer;
 	overflow: visible;
+	vertical-align: top;
 	.nowrap;
 
 	.icon {
